add some styles

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@
     gap: 20px;
     justify-content: center;
 }
+
+body {
+    background: green;
+    color: #fff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
